1. Intercom bug on IOS Safari fixed 2. Intercom and Telegrambar appear on scroll

--- a/src/common/settings/_initial.scss
+++ b/src/common/settings/_initial.scss
@@ -23,7 +23,7 @@ button{
 
 
 body > div {
-  overflow: hidden;
+ // overflow: hidden;
   box-sizing: border-box;
 }
 
